Style fix for scroll overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,5 +14,6 @@
 
   .main-content {
     padding: 1rem;
+    height: calc(100% - 45px);
   }
 }
